751: Correct video player size (#771)
* 751: Correct video player size

Add some sane defaults for `video` element sizes, so they can't blow out
their container. Add some extra constraints for videos inside horizontal
cards (browse, dh browse pages), so vertical videos don't get too long
in a summary view.

Fixes #751

* 751: Reduce leaflet preview video height

Also fix a bug where the map preview title does not always have white
space above it.

--- a/themes/mukurtu_v4/components/00-base/base/_base.scss
+++ b/themes/mukurtu_v4/components/00-base/base/_base.scss
@@ -66,10 +66,17 @@ address {
   font-style: normal;
 }
 
+video,
 img {
   max-inline-size: 100%;
   block-size: auto;
   display: block;
+}
+
+video {
+  inline-size: max-content;
+  max-block-size: 90vh;
+  background-color: black;
 }
 
 a {
