--- a/themes/mukurtu_v4/css/leaflet-overrides.css
+++ b/themes/mukurtu_v4/css/leaflet-overrides.css
@@ -9,7 +9,7 @@
     margin-block-end: 0;
   }
 
-  & .vertical-card__media + :where(.vertical-card__content h2) {
+  & .vertical-card__media + :where(.vertical-card__content) h2 {
     margin-block-start: var(--v-space-4xs);
   }
 
@@ -22,6 +22,7 @@
   & .media-oembed-content {
     inline-size: 100%;
     block-size: 100%;
+    max-block-size: 15rem;
     background-color: black;
   }
 
